--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </header>
         <nav id="primary">
             <ul> 
-                <li style="background-color:#9178F2;border-radius: 5px">
+                <li class="active">
                     <a href="index.html">Home</a></li> 
                     <li>
                         Profil
@@ -108,10 +108,8 @@
                 halo
             </div>
             <div id="motivasi">
-                <blockquote>
-                    "Tut Wuri Handayani"
-                </blockquote>
-                <p>- Ki Hajar Dewantara</p>
+                <p id="borderimg">"Tut Wuri Handayani"
+                - Ki Hajar Dewantara</p>
             </div>
             <div id="midpoint">
                 <div id="mars">
@@ -170,7 +168,7 @@
                 </div>
             </div>
         </div>
-        <footer class="clearfix, fit">
+        <footer class="clearfix">
             <div id="footer-column"> 
                 <h2>Tentang Author</h2> 
                     Dibuat oleh M. Luthfi Zulfikar (K3517039)<br>
