--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div id="content">
                 <div id="column">
                     <div id="konten">
-                        <h2>Ini Judul</h2>
+                        <h2>Sekilas Info</h2>
                         <div id="mini">
                             <h3>Artikel</h3>
                             <p>aaa</p>
@@ -142,7 +142,7 @@
                 </div>
                 <div id="column">
                     <div id="konten">
-                        <h2>Ini Judul</h2>
+                        <h2>Pengunguman</h2>
                         <div id="mini">
                             <h3>Artikel</h3>
                             <p>aaa</p>
@@ -151,7 +151,7 @@
                 </div>
                 <div id="column">
                     <div id="konten">
-                        <h2>Ini Judul</h2>
+                        <h2>Berita Lainnya</h2>
                         <div id="mini">
                             <h3>Artikel</h3>
                             <p>aaa</p>
