--- a/konten.html
+++ b/konten.html
@@ -115,6 +115,7 @@
                         Profil
                         <ul class="submenu"> 
                             <li><a href="guru.html">Daftar Guru</a></li> 
+                            <li><a href="murid.html">Daftar Murid</a></li> 
                             <li><a href="fasilitas.html">Fasilitas</a></li>
                         </ul>
                     </li>
@@ -123,40 +124,15 @@
             </ul>
         </nav>
         <div id="content-wrapper">
-            <div class="slideshow-container">
-
-        <div class="mySlides fade">
-            <div class="numbertext">1 / 3</div>
-            <img src="assets/images/IMG_1560.JPG" alt="Upacara Bendera" style="width:80%;display:block;
-    margin:auto;">
-            <div class="text"></div>
-        </div>
-
-        <div class="mySlides fade">
-            <div class="numbertext">2 / 3</div>
-            <img src="assets/images/IMG_1332.JPG" alt="Fatthia Izzati" style="width:80%;display:block;
-    margin:auto;">
-            <div class="text"></div>
-        </div>
-
-        <div class="mySlides fade">
-            <div class="numbertext">3 / 3</div>
-            <img src="assets/images/IMG_8181.JPG" alt="Eskul Krems" style="width:80%;display:block;
-    margin:auto;">
-            <div class="text"></div>
-        </div>
-    </div>
-<br>
-<div style="text-align:center">
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-</div>
-            <div id="motivasi">
-                <p id="borderimg">"Tut Wuri Handayani"
-                - Ki Hajar Dewantara</p>
+            <div id="artikel">
+                <h2>
+                    Ini Judul
+                </h2>
+                <p>
+                    Halo
+                </p>
             </div>
-            <div id="midpoint">
+            <div id="sidebar">
                 <div id="mars">
                     Mars SMAN 12 Bandung
                     <audio id="audio" src="assets/music/mars12.mp3" controls></audio> 
@@ -175,50 +151,8 @@
                     </fieldset>
                 </div>
             </div>
-            <div id="content">
-                <div id="column">
-                    <div id="konten">
-                        <h2>Sekilas Info</h2>
-                        <div id="mini"  class="clearfix">
-                            <h3>Ini Contoh Artikel</h3>
-                            <p class="border">lorem ipsum lorem ipsum lorem ipsum lorem ipsum  lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
-                            <div id="more"><a href="article-1.html">Baca Selengkapnya</a></div> 
-                        </div>
-                    </div>
-                </div>
-                <div id="column">
-                    <div id="konten">
-                        <h2>Pengunguman</h2>
-                        <div id="mini"  class="clearfix">
-                            <h3>Artikel</h3>
-                            <p class="border">aaa</p>
-                            <div id="more"><a href="article-1.html">Baca Selengkapnya</a></div> 
-                        </div>
-                    </div>
-                </div>
-                <div id="column">
-                    <div id="konten">
-                        <h2>Berita Lainnya</h2>
-                        <div id="mini"  class="clearfix">
-                            <h3>Artikel</h3>
-                            <p class="border">aaa</p>
-                            <div id="more"><a href="article-1.html">Baca Selengkapnya</a></div> 
-                        </div>
-                        <div id="mini"  class="clearfix">
-                            <h3>Artikel</h3>
-                            <p class="border">aaa</p>
-                            <div id="more"><a href="article-1.html">Baca Selengkapnya</a></div> 
-                        </div>
-                        <div id="mini"  class="clearfix">
-                            <h3>Artikel</h3>
-                            <p class="border">aaa</p>
-                            <div id="more"><a href="article-1.html">Baca Selengkapnya</a></div> 
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
-        <footer class="clearfix">
+    <footer class="clearfix">
             <div id="footer-column"> 
                 <h2>Tentang Author</h2> 
                     Dibuat oleh M. Luthfi Zulfikar (K3517039)<br>
@@ -237,7 +171,6 @@
                 <a href="http://twitter.com/harunaoi"target="_BLANK" >Twitter</a> 
             </div>
         </footer>
-    </div>
     <script>
 var slideIndex = 0;
 showSlides();
