--- a/guru.html
+++ b/guru.html
@@ -109,67 +109,72 @@
         </header>
         <nav id="primary">
             <ul> 
-                <li class="active">
+                <li>
                     <a href="index.html">Home</a></li> 
                     <li>
                         Profil
                         <ul class="submenu"> 
-                            <li><a href="guru.html">Daftar Guru</a></li>
-                            <li><a href="fasilitas.html">Fasilitas</a></li>
+                            <li class="active-menu"><a href="guru.html">Daftar Guru</a></li>
+                            <li><a href="tentang.html">Tentang</a></li>
                         </ul>
                     </li>
                 <li><a href="galeri.html">Galeri</a>
                 </li>
             </ul>
+            <div class="search">
+            <label for="tags"></label>
+                <input id="tags">
+                <input type="submit" value="Cari">
+            </div>
         </nav>
         <div id="content-wrapper">
             <div id="artikel">
                 <div class ="card">
                         <div class="card-image">
-                            <img src ="images/vert.png" alt="Gambar Card" class="center">
+                            <img src ="assets/images/avatar.png" alt="Gambar Card" class="center">
                         </div>
                         <div class="card-content">
-                            <h3 class="card-title">Vert</h3>
+                            <h3 class="card-title">Kepala Sekolah</h3>
                         </div>
                     </div>
                     <div class ="card">
                         <div class="card-image">
-                            <img src ="images/vert.png" alt="Gambar Card" class="center">
+                            <img src ="assets/images/avatar.png" alt="Gambar Card" class="center">
                         </div>
                         <div class="card-content">
-                            <h3 class="card-title">Vert</h3>
+                            <h3 class="card-title">Wakil Kepala Sekolah 1</h3>
                         </div>
                     </div>
                     <div class ="card">
                         <div class="card-image">
-                            <img src ="images/vert.png" alt="Gambar Card" class="center">
+                            <img src ="assets/images/avatar.png" alt="Gambar Card" class="center">
                         </div>
                         <div class="card-content">
-                            <h3 class="card-title">Vert</h3>
+                            <h3 class="card-title">Wakil Kepala Sekolah 2</h3>
                         </div>
                     </div>
                     <div class ="card">
                         <div class="card-image">
-                            <img src ="images/vert.png" alt="Gambar Card" class="center">
+                            <img src ="assets/images/avatar.png" alt="Gambar Card" class="center">
                         </div>
                         <div class="card-content">
-                            <h3 class="card-title">Vert</h3>
+                            <h3 class="card-title">Mr. X</h3>
                         </div>
                     </div>
                     <div class ="card">
                         <div class="card-image">
-                            <img src ="images/vert.png" alt="Gambar Card" class="center">
+                            <img src ="assets/images/avatar.png" alt="Gambar Card" class="center">
                         </div>
                         <div class="card-content">
-                            <h3 class="card-title">Vert</h3>
+                            <h3 class="card-title">Mr. Y</h3>
                         </div>
                     </div>
                     <div class ="card">
                         <div class="card-image">
-                            <img src ="images/vert.png" alt="Gambar Card" class="center">
+                            <img src ="assets/images/avatar.png" alt="Gambar Card" class="center">
                         </div>
                         <div class="card-content">
-                            <h3 class="card-title">Vert</h3>
+                            <h3 class="card-title">Mr. Z</h3>
                         </div>
                     </div>
             </div>
@@ -195,21 +200,23 @@
         </div>
     <footer class="clearfix">
             <div id="footer-column"> 
-                <h2>Tentang Author</h2> 
-                    Dibuat oleh M. Luthfi Zulfikar (K3517039)<br>
-                    Untuk melihat postingan pribadi saya, bisa kunjungi <a 
-                    href="http://zulfikarskywalker.wordpress.com" target="_BLANK">zulfikarskywalker.wordpress.com</a>
+                <h2>Tentang Sekolah</h2> 
+                <p>Sman 12 Bandung dulunya merupakan SMAN 3 Bandung, namun berpisah pada tahun 1980 dan berubah menjadi SMAN 12 bandung</p>
+
             </div> 
             <div id="footer-column"> 
-                <h2>Hubungi Saya</h2> 
-                    Jl. Pinggir Jalan<br> 
-                    Bandung 123456 Jawa Barat<br> 
-                    (+6281) 2345678 
+                <h2>Hubungi Kami</h2> 
+                <p>              
+                SMA NEGERI 12 BANDUNG
+                Jl. Sekejati no 36, Bandung, West Java, Indonesia 
+                </p>
+                <p>
+                 022-7310256</p>
             </div> 
             <div id="footer-column"> 
                 <h2>Temukan Saya di ...</h2> 
-                <a href="http://facebook.com/lzulfikar22" target="_BLANK">Facebook</a><br> 
-                <a href="http://twitter.com/harunaoi"target="_BLANK" >Twitter</a> 
+                <a href="https://www.facebook.com/pages/Sman-12-Bandung/386359588231471" target="_BLANK">Facebook</a><br> 
+                <a href="https://twitter.com/sman12bdg"target="_BLANK" >Twitter</a> 
             </div>
         </footer>
     <script>
