--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         }
         </style>
         <script>
+        $( function() {
+            $( "#dialog" ).dialog();
+        } );
             /* jam */
             $(document).ready(function(){
                     setInterval(function(){
@@ -55,12 +58,12 @@
             });
             function progress() {
                 var val = progressbar.progressbar( "value" ) || 0;
-                    progressbar.progressbar( "value", val + 2 );
+                    progressbar.progressbar( "value", val + 10 );
                 if ( val < 99 ) {
                     setTimeout( progress, 80 );
                 }
             }
-                setTimeout( progress, 2000 );
+                setTimeout( progress, 500 );
             } );
 
 
@@ -83,15 +86,19 @@
                 dots[slideIndex-1].className += " active";
                 setTimeout(showSlides, 2000); // Change image every 2 seconds
             }
+
   </script>
 </head>
 
-<body> <!--
+<body>
     <div id="white">
         <div id="progressbar">
             <div class="progress-label">Loading...</div>
         </div>
-    </div>-->
+    </div>
+    <div id="dialog" title="Selamat Datang">
+        <p>Selamat Datang di laman web SMAN 12 Bandung !</p>
+    </div>
     <div id="wrapper" class="clearfix">
         <header>
             <div id="jam">
@@ -109,18 +116,23 @@
         </header>
         <nav id="primary">
             <ul> 
-                <li class="active">
+                <li class="active-menu">
                     <a href="index.html">Home</a></li> 
                     <li>
                         Profil
                         <ul class="submenu"> 
                             <li><a href="guru.html">Daftar Guru</a></li> 
-                            <li><a href="fasilitas.html">Fasilitas</a></li>
+                            <li><a href="tentang.html">Tentang</a></li>
                         </ul>
                     </li>
                 <li><a href="galeri.html">Galeri</a>
                 </li>
             </ul>
+            <div class="search">
+            <label for="tags"></label>
+                <input id="tags">
+                <input type="submit" value="Cari">
+            </div>
         </nav>
         <div id="content-wrapper">
             <div class="slideshow-container">
@@ -180,9 +192,10 @@
                     <div id="konten">
                         <h2>Sekilas Info</h2>
                         <div id="mini"  class="clearfix">
-                            <h3>Ini Contoh Artikel</h3>
-                            <p class="border">lorem ipsum lorem ipsum lorem ipsum lorem ipsum  lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
-                            <div id="more"><a href="article-1.html">Baca Selengkapnya</a></div> 
+                            <h3>Sambutan Kepala Sekolah</h3>
+                            <p class="border">Assalamu'alaikum Wr. Wb.
+                                Salam sejahtera bagi kita semua</p>
+                            <div id="more"><a href="sambutan.html">Baca Selengkapnya</a></div> 
                         </div>
                     </div>
                 </div>
@@ -190,9 +203,9 @@
                     <div id="konten">
                         <h2>Pengunguman</h2>
                         <div id="mini"  class="clearfix">
-                            <h3>Artikel</h3>
-                            <p class="border">aaa</p>
-                            <div id="more"><a href="article-1.html">Baca Selengkapnya</a></div> 
+                            <h3>Ini Artikel</h3>
+                            <p class="border">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            <div id="more"><a href="konten.html">Baca Selengkapnya</a></div> 
                         </div>
                     </div>
                 </div>
@@ -200,19 +213,19 @@
                     <div id="konten">
                         <h2>Berita Lainnya</h2>
                         <div id="mini"  class="clearfix">
-                            <h3>Artikel</h3>
-                            <p class="border">aaa</p>
-                            <div id="more"><a href="article-1.html">Baca Selengkapnya</a></div> 
+                            <h3>Ini Artikel</h3>
+                            <p class="border">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            <div id="more"><a href="konten.html">Baca Selengkapnya</a></div> 
                         </div>
                         <div id="mini"  class="clearfix">
-                            <h3>Artikel</h3>
-                            <p class="border">aaa</p>
-                            <div id="more"><a href="article-1.html">Baca Selengkapnya</a></div> 
+                            <h3>Ini Artikel</h3>
+                            <p class="border">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            <div id="more"><a href="konten.html">Baca Selengkapnya</a></div> 
                         </div>
                         <div id="mini"  class="clearfix">
-                            <h3>Artikel</h3>
-                            <p class="border">aaa</p>
-                            <div id="more"><a href="article-1.html">Baca Selengkapnya</a></div> 
+                            <h3>Ini Artikel</h3>
+                            <p class="border">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            <div id="more"><a href="konten.html">Baca Selengkapnya</a></div> 
                         </div>
                     </div>
                 </div>
@@ -220,21 +233,23 @@
         </div>
         <footer class="clearfix">
             <div id="footer-column"> 
-                <h2>Tentang Author</h2> 
-                    Dibuat oleh M. Luthfi Zulfikar (K3517039)<br>
-                    Untuk melihat postingan pribadi saya, bisa kunjungi <a 
-                    href="http://zulfikarskywalker.wordpress.com" target="_BLANK">zulfikarskywalker.wordpress.com</a>
+                <h2>Tentang Sekolah</h2> 
+                <p>Sman 12 Bandung dulunya merupakan SMAN 3 Bandung, namun berpisah pada tahun 1980 dan berubah menjadi SMAN 12 bandung</p>
+
             </div> 
             <div id="footer-column"> 
-                <h2>Hubungi Saya</h2> 
-                    Jl. Pinggir Jalan<br> 
-                    Bandung 123456 Jawa Barat<br> 
-                    (+6281) 2345678 
+                <h2>Hubungi Kami</h2> 
+                <p>              
+                SMA NEGERI 12 BANDUNG
+                Jl. Sekejati no 36, Bandung, West Java, Indonesia 
+                </p>
+                <p>
+                 022-7310256</p>
             </div> 
             <div id="footer-column"> 
                 <h2>Temukan Saya di ...</h2> 
-                <a href="http://facebook.com/lzulfikar22" target="_BLANK">Facebook</a><br> 
-                <a href="http://twitter.com/harunaoi"target="_BLANK" >Twitter</a> 
+                <a href="https://www.facebook.com/pages/Sman-12-Bandung/386359588231471" target="_BLANK">Facebook</a><br> 
+                <a href="https://twitter.com/sman12bdg"target="_BLANK" >Twitter</a> 
             </div>
         </footer>
     </div>
@@ -256,8 +271,21 @@ function showSlides() {
   }
   slides[slideIndex-1].style.display = "block";  
   dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 2000); // Change image every 2 seconds
+  setTimeout(showSlides, 5000); // Change image every 2 seconds
 }
+
+              $( function() {
+    var availableTags = [
+        "tentang",
+        "galeri",
+        "gamaharsika",
+        "kepala sekolah",
+        "Pengunguman"
+    ];
+    $( "#tags" ).autocomplete({
+      source: availableTags
+    });
+  } );
 </script>
 </body>
 
