--- a/konten.html
+++ b/konten.html
@@ -114,14 +114,18 @@
                     <li>
                         Profil
                         <ul class="submenu"> 
-                            <li><a href="guru.html">Daftar Guru</a></li> 
-                            <li><a href="murid.html">Daftar Murid</a></li> 
-                            <li><a href="fasilitas.html">Fasilitas</a></li>
+                            <li><a href="guru.html">Daftar Guru</a></li>
+                            <li><a href="tentang.html">Tentang</a></li>
                         </ul>
                     </li>
                 <li><a href="galeri.html">Galeri</a>
                 </li>
             </ul>
+            <div class="search">
+            <label for="tags"></label>
+                <input id="tags">
+                <input type="submit" value="Cari">
+            </div>
         </nav>
         <div id="content-wrapper">
             <div id="artikel">
@@ -129,7 +133,13 @@
                     Ini Judul
                 </h2>
                 <p>
-                    Halo
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque venenatis laoreet mi, vel pretium sem pellentesque et. Suspendisse non laoreet ipsum. In porttitor eros sed dui laoreet malesuada. Nulla mollis purus sed quam fringilla placerat. Phasellus facilisis congue elit, id dignissim nisl sodales vitae. Mauris vitae sollicitudin ipsum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque non mattis felis, in ultrices ex. Aliquam erat volutpat. Etiam pharetra elit mauris, nec feugiat nulla congue non. Phasellus hendrerit libero quis ullamcorper auctor. Vestibulum ut sem eget ante semper dictum. Duis fermentum vitae justo at vehicula. Ut tempus, justo a bibendum ultrices, nunc massa luctus elit, non pretium sem tellus a orci. Donec non accumsan purus. Aenean eget sapien augue.
+                </p>
+                <p>
+                    Integer quis sodales ligula, eget euismod metus. Phasellus aliquet vitae nisl ut iaculis. Nullam tristique mauris in dolor auctor malesuada. In hac habitasse platea dictumst. Suspendisse eleifend venenatis massa. Proin urna neque, pulvinar sit amet massa rutrum, auctor venenatis lectus. Maecenas vel nibh eu nibh fermentum aliquet.
+                </p>
+                <p>
+                    Sed posuere mauris vel porta auctor. Donec feugiat sollicitudin lacus, ut consectetur lorem venenatis at. In congue, turpis quis pharetra mattis, lacus eros pulvinar elit, vel suscipit nisi urna euismod libero. Aenean bibendum eu mauris a consectetur. Sed sed mollis mi. Proin elementum, arcu vel maximus finibus, justo ex lacinia nisl, et egestas libero neque eu sapien. Praesent sit amet commodo est. Duis justo tellus, sodales eleifend dapibus eget, convallis vel elit.
                 </p>
             </div>
             <div id="sidebar">
@@ -154,21 +164,23 @@
         </div>
     <footer class="clearfix">
             <div id="footer-column"> 
-                <h2>Tentang Author</h2> 
-                    Dibuat oleh M. Luthfi Zulfikar (K3517039)<br>
-                    Untuk melihat postingan pribadi saya, bisa kunjungi <a 
-                    href="http://zulfikarskywalker.wordpress.com" target="_BLANK">zulfikarskywalker.wordpress.com</a>
+                <h2>Tentang Sekolah</h2> 
+                <p>Sman 12 Bandung dulunya merupakan SMAN 3 Bandung, namun berpisah pada tahun 1980 dan berubah menjadi SMAN 12 bandung</p>
+
             </div> 
             <div id="footer-column"> 
-                <h2>Hubungi Saya</h2> 
-                    Jl. Pinggir Jalan<br> 
-                    Bandung 123456 Jawa Barat<br> 
-                    (+6281) 2345678 
+                <h2>Hubungi Kami</h2> 
+                <p>              
+                SMA NEGERI 12 BANDUNG
+                Jl. Sekejati no 36, Bandung, West Java, Indonesia 
+                </p>
+                <p>
+                 022-7310256</p>
             </div> 
             <div id="footer-column"> 
                 <h2>Temukan Saya di ...</h2> 
-                <a href="http://facebook.com/lzulfikar22" target="_BLANK">Facebook</a><br> 
-                <a href="http://twitter.com/harunaoi"target="_BLANK" >Twitter</a> 
+                <a href="https://www.facebook.com/pages/Sman-12-Bandung/386359588231471" target="_BLANK">Facebook</a><br> 
+                <a href="https://twitter.com/sman12bdg"target="_BLANK" >Twitter</a> 
             </div>
         </footer>
     <script>
