--- a/galeri.html
+++ b/galeri.html
@@ -131,7 +131,7 @@
             <div id="artikel">
                 <h2>Gamaharsika</h2>
                 <video width="320" height="240" controls class="video">
-                    <source src="assets/video/reaction.mp4" type="video/mp4">
+                    <source src="https://www.youtube.com/watch?v=9sxl8CuqsPw">
                 </video>
             </div>
             <div id="sidebar">
