--- a/galeri.html
+++ b/galeri.html
@@ -130,9 +130,9 @@
         <div id="content-wrapper">
             <div id="artikel">
                 <h2>Gamaharsika</h2>
-                <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=9sxl8CuqsPw">
-</iframe>
+                <video width="320" height="240" controls class="video">
+                    <source src="sman12bandung/assets/video/reaction.MP4" type="video/mp4">
+                </video>
             </div>
             <div id="sidebar">
                 <div id="mars">
