--- a/galeri.html
+++ b/galeri.html
@@ -104,6 +104,7 @@
                 <div id="alamat" class="clearfix">
                     <p>Alamat :	Jl. Sekejati no 36, Bandung, West Java, Indonesia</p>
                     <p>Telp. 022-7310256</p>
+                    <p style="margin-bottom: 2px !important;"><a href="https://lzulfikar22.github.io/sman12bandung/">lzulfikar22.github.io/sman12bandung</a></p>
                 </div>
             </div>
         </header>
@@ -131,7 +132,7 @@
             <div id="artikel">
                 <h2>Gamaharsika</h2>
                 <video width="320" height="240" controls class="video">
-                    <source src="sman12bandung/assets/video/reaction.MP4" type="video/mp4">
+                    <source src="assets/video/reaction.mp4" type="video/mp4">
                 </video>
             </div>
             <div id="sidebar">
