--- a/tentang.html
+++ b/tentang.html
@@ -104,6 +104,7 @@
                 <div id="alamat" class="clearfix">
                     <p>Alamat :	Jl. Sekejati no 36, Bandung, West Java, Indonesia</p>
                     <p>Telp. 022-7310256</p>
+                    <p style="margin-bottom: 2px !important;"><a href="https://lzulfikar22.github.io/sman12bandung/">lzulfikar22.github.io/sman12bandung</a></p>
                 </div>
             </div>
         </header>
